--- a/BaiduMap.css
+++ b/BaiduMap.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
 #circle{
     width: 100px;
     height: 100px;
@@ -5,4 +9,17 @@
     background-color: #26769a;
     position: absolute;
     opacity: 0.7;
+    font-size: 20px;
+    color: white;
+    text-align: center;
+}
+.strictAreaName{
+    display: block;
+    height: 50px;
+    padding:20px 0 10px;
+}
+.count{
+    display: block;
+    height: 50px;
+    padding:10px 0 20px;
 }
