--- a/BaiduMap.css
+++ b/BaiduMap.css
@@ -13,6 +13,9 @@
     color: white;
     text-align: center;
 }
+#circle:hover{
+    background-color: #14c3dc;
+}
 .strictAreaName{
     display: block;
     height: 50px;
@@ -22,4 +25,9 @@
     display: block;
     height: 50px;
     padding:10px 0 20px;
+}
+#square{
+    width:200px;
+    height: 50px;
+    background-color: #26769a;
 }
